# erin-equalizer

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-04-erin-equalizer.md
docs/superpowers/specs/: 2026-04-04-erin-equalizer-design.md
presets/factory/: BassBoost.xml  Flat.xml  HighCut.xml  LowCut.xml  SmileyCurve.xml  VocalPresence.xml
src/: BandComponent.cpp  BandComponent.h  BiquadFilter.h  EqConstants.h  EqProcessor.cpp  EqProcessor.h  LevelMeter.cpp  LevelMeter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  Toolbar.cpp  Toolbar.h
tests/: BiquadFilterTest.cpp  EqProcessorTest.cpp
